Fixed H4 elements in editors being hard to see in light mode

--- a/styles/less/global/prose-mirror.less
+++ b/styles/less/global/prose-mirror.less
@@ -25,7 +25,7 @@
             }
             h4 {
                 font-size: var(--font-size-16);
-                color: @beige;
+                color: light-dark(@dark, @beige);
                 font-weight: 600;
             }
 
